vlib/v/checker/tests/struct_field_name_err.out
vlib/v/checker/tests/struct_field_name_err.vv:2:2: error: field name `Architecture` cannot contain uppercase letters, use snake_case instead
    1 | struct Release {
    2 |     Architecture []string
      |     ~~~~~~~~~~~~~~~~~~~~~
    3 |     Components   []string
    4 | }
vlib/v/checker/tests/struct_field_name_err.vv:3:2: error: field name `Components` cannot contain uppercase letters, use snake_case instead
    1 | struct Release {
    2 |     Architecture []string
    3 |     Components   []string
      |     ~~~~~~~~~~~~~~~~~~~~~
    4 | }
    5 |
