vlib/v/checker/tests/struct_field_name_err.vv
struct Release {
	Architecture []string
	Components   []string
}

fn main() {
	r := Release{}
	println(r)
}
